--- a/themes/bootstrap3/templates/RecordTab/holdingsils/extended.phtml
+++ b/themes/bootstrap3/templates/RecordTab/holdingsils/extended.phtml
@@ -33,12 +33,14 @@
                 if ((int)$holding['availability'] === \VuFind\ILS\Logic\ItemStatus::STATUS_UNCERTAIN) {
                   $statusClassEsc = 'text-warning';
                   $status = $holding['status'];
+                  $schemaAvailEsc = 'http://schema.org/LimitedAvailability';
                 } else {
                   $statusClassEsc = 'text-success';
                   $status = is_int($holding['availability']) && !empty($holding['status']) ? $holding['status'] : 'Available';
+                  $schemaAvailEsc = 'http://schema.org/InStock';
                 }
               ?>
-              <span class="<?=$statusClassEsc?>"><?=$this->transEsc($status)?><link property="availability" href="http://schema.org/InStock"></span>
+              <span class="<?=$statusClassEsc?>"><?=$this->transEsc($status)?><link property="availability" href="<?=$schemaAvailEsc?>"></span>
             <?php else: ?>
               <?php /* Begin Unavailable Items (Recalls) */ ?>
               <span class="text-danger"><?=$this->transEsc($holding['status'])?><link property="availability" href="http://schema.org/OutOfStock"></span>
