--- a/themes/bootstrap3/templates/ajax/status-uncertain.phtml
+++ b/themes/bootstrap3/templates/ajax/status-uncertain.phtml
@@ -1,1 +1,1 @@
-<span class="label label-warning"><?=$this->transEsc('Uncertain')?></span>
+<span class="label label-warning"><?=$this->transEsc('HoldingStatus::availability_uncertain')?></span>
