--- a/themes/bootstrap3/templates/search/list-list.phtml
+++ b/themes/bootstrap3/templates/search/list-list.phtml
@@ -3,10 +3,7 @@
 <?php $listStart = $this->results->getStartRecord() + $i - $this->indexStart; ?>
 <ol class="<?=$this->escapeHtmlAttr(trim('record-list ' . ($this->resultsClass ?? '')))?>" start="<?=$listStart?>">
   <?php foreach ($this->results->getResults() as $current): ?>
-    <?php
-      $recordNumber = $this->results->getStartRecord() + $i - $this->indexStart;
-      $i++;
-    ?>
+    <?php $recordNumber = $this->results->getStartRecord() + $i - $this->indexStart; ?>
     <?php // Data-record-number attribute is for analytics use.  Do not remove. ?>
     <li<?php if (empty($this->excludeResultIds)): ?> id="result<?=$i?>"<?php endif; ?> class="result<?=$current->supportsAjaxStatus() ? ' ajaxItem' : ''?>" data-record-number="<?=$this->escapeHtmlAttr($recordNumber)?>">
       <?php if (isset($this->showCheckboxes) && $this->showCheckboxes): ?>
@@ -17,5 +14,9 @@
       </div>
       <?=$this->record($current)->getSearchResult('list', $this->results)?>
     </li>
+    <?php
+      // First record is 0, so increment the counter after each record:
+      $i++;
+    ?>
   <?php endforeach; ?>
 </ol>
