--- a/themes/bootstrap3/templates/layout/layout.phtml
+++ b/themes/bootstrap3/templates/layout/layout.phtml
@@ -1,13 +1,16 @@
 <?=$this->doctype()?>
-<?php // Set up the search box -- there are three possible cases:
-// 1. No search box was set; we should default to the normal box
-// 2. It was set to false; we should display nothing
-// 3. It is set to a custom string; we should display the provided version
-// Set up default search box if no data was provided from the template;
-// this covers case 1.  Cases 2 and 3 are then covered by logic below.
-if (!isset($this->layout()->searchbox)) {
-  $this->layout()->searchbox = $this->context($this)->renderInContext('search/searchbox.phtml', []);
-}
+<?php
+  // Set up the search box -- there are three possible cases:
+  // 1. No search box was set; we should default to the normal box
+  // 2. It was set to false; we should display nothing
+  // 3. It is set to a custom string; we should display the provided version
+  // Set up default search box if no data was provided from the template;
+  // this covers case 1.  Cases 2 and 3 are then covered by logic below.
+  // Note: The searchbox needs to be rendered before the HTML header is build.
+  // Otherwise, the Javascript will not be loaded correctly.
+  if (!isset($this->layout()->searchbox)) {
+    $this->layout()->searchbox = $this->context($this)->renderInContext('search/searchbox.phtml', []);
+  }
 ?>
 <html lang="<?=$this->layout()->userLang?>"<?php if ($this->layout()->rtl): ?> dir="rtl"<?php endif; ?>>
   <head>
