--- a/themes/bootstrap3/templates/search/searchbox.phtml
+++ b/themes/bootstrap3/templates/search/searchbox.phtml
@@ -69,8 +69,26 @@
 <?php else: ?>
   <form id="searchForm" class="searchForm navbar-form navbar-left flip" method="get" action="<?=$this->url($basicSearch)?>" name="searchForm" autocomplete="off">
     <?= $this->context($this)->renderInContext('search/searchTabs', ['searchTabs' => $tabConfig['tabs'], 'showCounts' => $tabConfig['showCounts']]); ?>
-    <?php $placeholder = $this->searchbox()->getPlaceholderText($tabConfig['selected']['id'] ?? null); ?>
-    <input id="searchForm_lookfor" class="searchForm_lookfor form-control search-query<?php if ($this->searchbox()->autocompleteEnabled($this->searchClassId)):?> autocomplete searcher:<?=$this->escapeHtmlAttr($this->searchClassId) ?><?=$this->searchbox()->autocompleteAutoSubmit($this->searchClassId) ? ' ac-auto-submit' : '' ?><?php endif ?>" type="search" name="lookfor" value="<?=$this->escapeHtmlAttr($this->lookfor)?>"<?php if ($placeholder): ?> placeholder="<?=$this->transEscAttr($placeholder) ?>"<?php endif ?> aria-label="<?=$this->transEscAttr("search_terms")?>">
+    <?php
+      $placeholder = $this->searchbox()->getPlaceholderText($tabConfig['selected']['id'] ?? null);
+      $searchboxAttributes = [
+        'id' => 'searchForm_lookfor',
+        'class' => 'searchForm_lookfor form-control search-query',
+        'type' => 'search',
+        'name' => 'lookfor',
+        'value' => $this->lookfor,
+        'aria-label' => $this->translate('search_terms'),
+      ];
+      if ($placeholder) {
+        $searchboxAttributes['placeholder'] = $placeholder;
+      }
+      if ($this->searchbox()->autocompleteEnabled($this->searchClassId)) {
+        $searchboxAttributes['class'] .= " autocomplete searcher:{$this->searchClassId}"
+          . ($this->searchbox()->autocompleteAutoSubmit($this->searchClassId) ? ' ac-auto-submit' : '');
+        $searchboxAttributes['data-autocomplete-formatting-rules'] = $this->searchbox()->autocompleteFormattingRulesJson($this->searchClassId);
+      }
+    ?>
+    <input<?=$this->htmlAttributes($searchboxAttributes)?>>
     <?php if ($handlerCount > 1): ?>
       <select id="searchForm_type" class="searchForm_type form-control" name="type" data-native-menu="false" aria-label="<?=$this->transEscAttr("Search type")?>">
         <?php $currentGroup = $insideGroup = false; ?>
